Fix so map no displays on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@ object, video {
 
 #container {
     width: 100%;
-    display: flex;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
     flex-wrap: wrap;
 }
 
@@ -41,6 +45,9 @@ html, body {
     height: 100%;
 }
 @media screen and (max-width: 305px) {
+    #container {
+	display: block;
+    }
     #search-div {
 	width: 100%;
     }
